--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -17,6 +17,12 @@ repositories {
 }
 
 dependencies {
+
+    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.36'
+
+    annotationProcessor 'org.projectlombok:lombok:1.18.36'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
