--- a/.github/workflows/javadoc.yml
+++ b/.github/workflows/javadoc.yml
@@ -20,3 +20,5 @@ jobs:
           java-version: 17
           target-folder: docs
           project: gradle
+          custom-command: javadoc -d docs
+          
